# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1335 2010-08-30 11:02:42 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-08-30 Fixed bug#5786 - -Reply- dropdown menu not reverting to initial state then closing reply
    window.
 - 2010-08-27 Fixed bug#5833 - The text "Attachment" is above the paper-clip icon in the CustomerTicketZoom.
 - 2010-08-27 Fixed bug#5831 - English language typo: "doesn't exists" should
    be "doesn't exist".
 - 2010-08-27 Updated Polish translation file, thanks to Janek Rumianek!
 - 2010-08-25 Fixed bug#5805 - Customer interface: creation of a new ticket
    requires two clicks on the submit button.
 - 2010-08-26 Fixed bug#5819 - Queue-View on size "S" is missing  the link to size "L".
 - 2010-08-26 Fixed bug#5821 - SysConfig CSSLoader description is displayed incorrectly.
 - 2010-08-25 Fixed bug#5795 - Some .pl files in bin directory fails to load
    modules from  Kernel/cpan-lib.
 - 2010-08-25 Fixed bug#5817 Button to adjust the article-list-size contains a link on IE 8.0.
 - 2010-08-25 Fixed bug#5805 - Customer interface: creation of a new ticket
    requires two clicks on the submit button.
 - 2010-08-25 Fixed bug#5820 - Ticket owner get no email reminder reached
    notification if ticket is unlocked and owner is not subscribed to queue.
 - 2010-08-25 Fixed bug#5815 - Customer interface field validation takes place before submitting.
 - 2010-08-25 Fixed bug#5808 - Generic Agent does not display job info.
 - 2010-08-24 Applied change suggested in bug#5733. $Text should be dereferenced while counting its length.
 - 2010-08-24 Fixed bug#5806 - Default services aren't checked in AdminCustomerUserService.