@@ -2,7 +2,7 @@
 # FooterJS.dtl - provides global HTML footer JavaScript
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: FooterJS.dtl,v 1.15 2010-08-17 12:33:34 mg Exp $
+# $Id: FooterJS.dtl,v 1.16 2010-08-30 11:05:11 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -36,7 +36,8 @@
             ValidateServerErrorTitle: '$JSText{"Error"}',
             ValidateServerErrorMsg: '$JSText{"One or more errors occured!"}',
             PopupLeaveParentWindowMsg: '$JSText{"If you now leave this page, all open popup windows will be closed, too!"}',
-            DialogCloseMsg: '$JSText{"Close this dialog"}'
+            DialogCloseMsg: '$JSText{"Close this dialog"}',
+            PopupBlockerMsg: '$JSText{"Could not open popup window. Please disable any popup blockers for this application."}'
         });
         Core.Agent.Init();
     });
